--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ header a:hover {
 /* Showcase */
 #showcase {
     min-height: 400px;
-    background: url("../img/showcase.jpg") no-repeat;
+    background: url("../img/showcase.jpg") no-repeat 0 -400px;
     text-align: center;
     color: #ffffff;
 }
